Fix scrollbar issue

--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -892,6 +892,38 @@ label:not(:first-child) {
   width: 100vw;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-\[100vw\] {
+  width: 100vw;
+}
+
+.min-w-full {
+  min-width: 100%;
+}
+
 .max-w-5xl {
   max-width: 64rem;
 }
@@ -902,6 +934,26 @@ label:not(:first-child) {
 
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-md {
+  max-width: 28rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.flex-none {
+  flex: none;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .select-none {
@@ -969,8 +1021,16 @@ label:not(:first-child) {
   align-self: flex-end;
 }
 
+.overflow-scroll {
+  overflow: scroll;
+}
+
 .overflow-x-auto {
   overflow-x: auto;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
 }
 
 .truncate {
@@ -1012,6 +1072,26 @@ label:not(:first-child) {
 
 .border-transparent {
   border-color: transparent;
+}
+
+.border-red-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
+}
+
+.border-red-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+
+.border-purple-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(147 51 234 / var(--tw-border-opacity));
+}
+
+.border-blue-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 
 .border-b-slate-400 {
@@ -1190,6 +1270,14 @@ label:not(:first-child) {
        column-fill: auto;
 }
 
+.\[scrollbar-gutter\:stable\] {
+  scrollbar-gutter: stable;
+}
+
+.\[scrollbar-gutter\:auto\] {
+  scrollbar-gutter: auto;
+}
+
 /* For multiple select tag from library */
 
 .mult-select-tag {
@@ -1256,6 +1344,26 @@ better use server-sides; client-side bad UI (cannot enter more char).
 }
 
 @media (min-width: 430px) {
+  .xs\:max-w-3xl {
+    max-width: 48rem;
+  }
+
+  .xs\:max-w-xl {
+    max-width: 36rem;
+  }
+
+  .xs\:max-w-2xl {
+    max-width: 42rem;
+  }
+
+  .xs\:max-w-lg {
+    max-width: 32rem;
+  }
+
+  .xs\:max-w-md {
+    max-width: 28rem;
+  }
+
   .xs\:columns-3 {
     -moz-columns: 3;
          columns: 3;
@@ -1263,6 +1371,22 @@ better use server-sides; client-side bad UI (cannot enter more char).
 }
 
 @media (min-width: 640px) {
+  .sm\:max-w-3xl {
+    max-width: 48rem;
+  }
+
+  .sm\:max-w-5xl {
+    max-width: 64rem;
+  }
+
+  .sm\:max-w-2xl {
+    max-width: 42rem;
+  }
+
+  .sm\:max-w-xl {
+    max-width: 36rem;
+  }
+
   .sm\:columns-6 {
     -moz-columns: 6;
          columns: 6;
@@ -1270,6 +1394,22 @@ better use server-sides; client-side bad UI (cannot enter more char).
 }
 
 @media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:max-w-5xl {
+    max-width: 64rem;
+  }
+
+  .md\:max-w-2xl {
+    max-width: 42rem;
+  }
+
   .md\:columns-6 {
     -moz-columns: 6;
          columns: 6;
@@ -1278,6 +1418,17 @@ better use server-sides; client-side bad UI (cannot enter more char).
   .md\:columns-3 {
     -moz-columns: 3;
          columns: 3;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:max-w-5xl {
+    max-width: 64rem;
+  }
+
+  .lg\:columns-6 {
+    -moz-columns: 6;
+         columns: 6;
   }
 }
 
